// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChainHistoryHttpService healthy state /blocks/by-hashes server and snapshot testing has all block information 1`] = `
Array [
  Object {
    "confirmations": 1957883,
    "date": 2020-07-29T03:58:16.000Z,
    "epoch": 74,
    "epochSlot": 27480,
    "fees": 0n,
    "header": Object {
      "blockNo": 1598507,
      "hash": "7a48b034645f51743550bbaf81f8a14771e58856e031eb63844738ca8ad72298",
      "slot": 1625880,
    },
    "nextBlock": undefined,
    "previousBlock": undefined,
    "size": 989,
    "slotLeader": "de665a71064706f946030505eae950583f08c316f0f58997961092b1",
    "totalOutput": 0n,
    "txCount": 1,
    "vrf": "vrf_vk1wmmxg7swhx0raa2yddkt7ktlvh55dje8a5uwge2z90t5e7v4g5esp49zzk",
  },
  Object {
    "confirmations": 1901835,
    "date": 2020-08-11T07:53:56.000Z,
    "epoch": 76,
    "epochSlot": 300820,
    "fees": 0n,
    "header": Object {
      "blockNo": 1654555,
      "hash": "469cc6fbcc186de6b12c392ad0cc84a20c4d4774c1f9c3cfd80745de00856f4b",
      "slot": 2763220,
    },
    "nextBlock": undefined,
    "previousBlock": undefined,
    "size": 737,
    "slotLeader": "b0dca078b823cde627da136200d6618c49ad712b77972a1c5e135763",
    "totalOutput": 0n,
    "txCount": 1,
    "vrf": "vrf_vk15nyl9g8sa4jkyjqm0jf9qm6n9ageea8z4duzssvkqz5ssrjfs7ksqhx8dk",
  },
]
`;

exports[`ChainHistoryHttpService healthy state /txs/by-addresses server and snapshot testing does not include transactions before indicated block 1`] = `
Array [
  Object {
    "auxiliaryData": undefined,
    "blockHeader": Object {
      "blockNo": 1654555,
      "hash": "469cc6fbcc186de6b12c392ad0cc84a20c4d4774c1f9c3cfd80745de00856f4b",
      "slot": 2763220,
    },
    "body": Object {
      "certificates": Array [
        Object {
          "__typename": "PoolRegistrationCertificate",
          "poolParameters": null,
        },
        Object {
          "__typename": "StakeDelegationCertificate",
          "poolId": "pool1jcwn98a6rqr7a7yakanm5sz6asx9gfjsr343mus0tsye23wmg70",
          "stakeKeyHash": "45ca75d48381bb91e5cabbdee953ee2ba3ee6490889738a52ac62eb3",
        },
      ],
      "collaterals": Array [],
      "fee": 197929n,
      "inputs": Array [],
      "mint": undefined,
      "outputs": Array [
        Object {
          "address": "addr_test1qr4m502gr9hnaxac5mxjln22jwavf7pcjmh9sw7fujdvgvj9ef6afquphwg7tj4mmm548m3t50hxfyygjuu222kx96eshcathg",
          "datum": undefined,
          "value": Object {
            "assets": undefined,
            "coins": 999502622402n,
          },
        },
      ],
      "validityInterval": Object {
        "invalidBefore": undefined,
        "invalidHereafter": 2764200,
      },
      "withdrawals": undefined,
    },
    "id": "8fd14baca91c674fafae59701b7dc0eda1266202ec8445bad3244bd8669a7fb5",
    "index": 0,
    "txSize": 736,
    "witness": Object {
      "redeemers": undefined,
      "signatures": Map {},
    },
  },
  Object {
    "auxiliaryData": undefined,
    "blockHeader": Object {
      "blockNo": 1912426,
      "hash": "1c87c4191424d3a3825f7717f327749f08ba5c1a95ca4dffd46b15db518b6876",
      "slot": 8063200,
    },
    "body": Object {
      "certificates": Array [
        Object {
          "__typename": "PoolRegistrationCertificate",
          "poolParameters": null,
        },
      ],
      "collaterals": Array [],
      "fee": 205145n,
      "inputs": Array [],
      "mint": undefined,
      "outputs": Array [
        Object {
          "address": "addr_test1qr4m502gr9hnaxac5mxjln22jwavf7pcjmh9sw7fujdvgvj9ef6afquphwg7tj4mmm548m3t50hxfyygjuu222kx96eshcathg",
          "datum": undefined,
          "value": Object {
            "assets": undefined,
            "coins": 10306556787917n,
          },
        },
      ],
      "validityInterval": Object {
        "invalidBefore": undefined,
        "invalidHereafter": 8064171,
      },
      "withdrawals": undefined,
    },
    "id": "3d4cd09885d39673125c3a15f8acb45d92fde137f9effe7a5131f6cc7241d960",
    "index": 0,
    "txSize": 780,
    "witness": Object {
      "redeemers": undefined,
      "signatures": Map {},
    },
  },
]
`;

exports[`ChainHistoryHttpService healthy state /txs/by-addresses server and snapshot testing finds transactions with address within inputs 1`] = `
Array [
  Object {
    "auxiliaryData": undefined,
    "blockHeader": Object {
      "blockNo": 3274726,
      "hash": "5caede44f4a5a775443095159cd42c8a64f35494086957ab3e04624015a6e13c",
      "slot": 49032415,
    },
    "body": Object {
      "certificates": undefined,
      "collaterals": Array [],
      "fee": 183761n,
      "inputs": Array [],
      "mint": undefined,
      "outputs": Array [
        Object {
          "address": "addr_test1wphyve8r76kvfr5yn6k0fcmq0mn2uf6c6mvtsrafmr7awcg0vnzpg",
          "datum": "cd968f149166bfd195c82852cbbed09f3ca9d5b070e669f6c50f4ea9d98164f9",
          "value": Object {
            "assets": Map {
              "126b8676446c84a5cd6e3259223b16a2314c5676b88ae1c1f8579a8f7453554e444145" => 1678546n,
            },
            "coins": 254640002n,
          },
        },
        Object {
          "address": "addr_test1qq7rv7r27wq5nz2q6htul8k55xrcjsz2tpxkhqfk5f6kfgfnqdurhe3e8zlltj63kwh78hg7ykrexmn6jxxn42egzs4skzyvvc",
          "datum": undefined,
          "value": Object {
            "assets": Map {
              "126b8676446c84a5cd6e3259223b16a2314c5676b88ae1c1f8579a8f7453554e444145" => 661706n,
            },
            "coins": 38816239n,
          },
        },
      ],
      "validityInterval": Object {
        "invalidBefore": undefined,
        "invalidHereafter": undefined,
      },
      "withdrawals": undefined,
    },
    "id": "6eec4e9691e0fc2442e5c9bf22847998b80a1625b18a882a4e7b9e0cdda48dc3",
    "index": 11,
    "txSize": 640,
    "witness": Object {
      "redeemers": undefined,
      "signatures": Map {},
    },
  },
]
`;

exports[`ChainHistoryHttpService healthy state /txs/by-addresses server and snapshot testing finds transactions with address within outputs 1`] = `
Array [
  Object {
    "auxiliaryData": undefined,
    "blockHeader": Object {
      "blockNo": 3274726,
      "hash": "5caede44f4a5a775443095159cd42c8a64f35494086957ab3e04624015a6e13c",
      "slot": 49032415,
    },
    "body": Object {
      "certificates": undefined,
      "collaterals": Array [],
      "fee": 181605n,
      "inputs": Array [],
      "mint": undefined,
      "outputs": Array [
        Object {
          "address": "addr_test1wphyve8r76kvfr5yn6k0fcmq0mn2uf6c6mvtsrafmr7awcg0vnzpg",
          "datum": "7d6dd89f80dfa80dd0a0e334c220df18cfdc11b8e9e0340384ef193b8a09092b",
          "value": Object {
            "assets": Map {
              "126b8676446c84a5cd6e3259223b16a2314c5676b88ae1c1f8579a8f744d494e" => 359387n,
            },
            "coins": 201519044n,
          },
        },
        Object {
          "address": "addr_test1qp64f82kqyn934qtytqf2xhzqnasknqk5f5y88e3jh7s95cmtpwh9z5nwy2egezfnm7eddt4ysfp7tg87attl3ejgjns2qgy69",
          "datum": undefined,
          "value": Object {
            "assets": undefined,
            "coins": 391939485n,
          },
        },
      ],
      "validityInterval": Object {
        "invalidBefore": undefined,
        "invalidHereafter": undefined,
      },
      "withdrawals": undefined,
    },
    "id": "caaada4c53256a9bcba2d006b3f427f089d43372442a550a7349627a46682375",
    "index": 1,
    "txSize": 591,
    "witness": Object {
      "redeemers": undefined,
      "signatures": Map {},
    },
  },
  Object {
    "auxiliaryData": undefined,
    "blockHeader": Object {
      "blockNo": 3274726,
      "hash": "5caede44f4a5a775443095159cd42c8a64f35494086957ab3e04624015a6e13c",
      "slot": 49032415,
    },
    "body": Object {
      "certificates": undefined,
      "collaterals": Array [],
      "fee": 179977n,
      "inputs": Array [],
      "mint": undefined,
      "outputs": Array [
        Object {
          "address": "addr_test1wphyve8r76kvfr5yn6k0fcmq0mn2uf6c6mvtsrafmr7awcg0vnzpg",
          "datum": "87d376b58b5c5c6b173694172d980100bf6d383b2755618f139dedc1e58c9bea",
          "value": Object {
            "assets": undefined,
            "coins": 23000000n,
          },
        },
        Object {
          "address": "addr_test1qr6sape30ttq8zahxmah2wzaqk3ldc0n0cehj8e408ejhwrq5hrg8xmfyakef5awud6g6uew447r6970evl9lzgrak0qgz3ejq",
          "datum": undefined,
          "value": Object {
            "assets": undefined,
            "coins": 893280136n,
          },
        },
      ],
      "validityInterval": Object {
        "invalidBefore": undefined,
        "invalidHereafter": undefined,
      },
      "withdrawals": undefined,
    },
    "id": "49fa6b7245674fd11727cfb4d47ec7fad380c198a2a975b0423c5f6c255488f9",
    "index": 3,
    "txSize": 554,
    "witness": Object {
      "redeemers": undefined,
      "signatures": Map {},
    },
  },
  Object {
    "auxiliaryData": undefined,
    "blockHeader": Object {
      "blockNo": 3274726,
      "hash": "5caede44f4a5a775443095159cd42c8a64f35494086957ab3e04624015a6e13c",
      "slot": 49032415,
    },
    "body": Object {
      "certificates": undefined,
      "collaterals": Array [],
      "fee": 179977n,
      "inputs": Array [],
      "mint": undefined,
      "outputs": Array [
        Object {
          "address": "addr_test1wphyve8r76kvfr5yn6k0fcmq0mn2uf6c6mvtsrafmr7awcg0vnzpg",
          "datum": "b72256efc2b1cd920d75f769d1ca11433c2890b1ac5ade783de9b536504be618",
          "value": Object {
            "assets": undefined,
            "coins": 154000000n,
          },
        },
        Object {
          "address": "addr_test1qq75mx8z9sh8aucku2lwjp7c6fe2m3w90aqt9kw4rczjt8lj0rhad28c9f9cmcm64jyqpvths06w4tgwc0vnpx3veqvsj2953n",
          "datum": undefined,
          "value": Object {
            "assets": undefined,
            "coins": 612159447n,
          },
        },
      ],
      "validityInterval": Object {
        "invalidBefore": undefined,
        "invalidHereafter": undefined,
      },
      "withdrawals": undefined,
    },
    "id": "a7eda535edc983139cc1053d074106aef54b25e9c9ee9de6bf1bf69709dabfd4",
    "index": 5,
    "txSize": 554,
    "witness": Object {
      "redeemers": undefined,
      "signatures": Map {},
    },
  },
  Object {
    "auxiliaryData": undefined,
    "blockHeader": Object {
      "blockNo": 3274726,
      "hash": "5caede44f4a5a775443095159cd42c8a64f35494086957ab3e04624015a6e13c",
      "slot": 49032415,
    },
    "body": Object {
      "certificates": undefined,
      "collaterals": Array [],
      "fee": 186401n,
      "inputs": Array [],
      "mint": undefined,
      "outputs": Array [
        Object {
          "address": "addr_test1wphyve8r76kvfr5yn6k0fcmq0mn2uf6c6mvtsrafmr7awcg0vnzpg",
          "datum": "13d75d53a0ebf1d51dc7332634366ee9191dc9c5f371fbdfdd1af382638cd310",
          "value": Object {
            "assets": Map {
              "126b8676446c84a5cd6e3259223b16a2314c5676b88ae1c1f8579a8f744d494e" => 30000n,
            },
            "coins": 20487995n,
          },
        },
        Object {
          "address": "addr_test1qry75qe2e5zez3ny5nuu2dsxrrwhxpl7mr7gdwpsgyfsvtgcgddl7qwm2vl7vedf3xp0vy7ya9ag7dqkcqqktv5403nspw962t",
          "datum": undefined,
          "value": Object {
            "assets": Map {
              "126b8676446c84a5cd6e3259223b16a2314c5676b88ae1c1f8579a8f744d494e" => 60704n,
              "22c3b86a5b88a78b5de52f4aed2831d1483b3b7681f1ee2569538130cb6de817be83e93a5771e6c98ee305e1012bae70d9eb9dff70e2d71e4b611779" => 194994n,
            },
            "coins": 591423467n,
          },
        },
      ],
      "validityInterval": Object {
        "invalidBefore": undefined,
        "invalidHereafter": undefined,
      },
      "withdrawals": undefined,
    },
    "id": "b46c48229336aec327a5f537bcbf1ca8fa6a3afbf60aa66880aa6a234e5fce92",
    "index": 7,
    "txSize": 700,
    "witness": Object {
      "redeemers": undefined,
      "signatures": Map {},
    },
  },
  Object {
    "auxiliaryData": undefined,
    "blockHeader": Object {
      "blockNo": 3274726,
      "hash": "5caede44f4a5a775443095159cd42c8a64f35494086957ab3e04624015a6e13c",
      "slot": 49032415,
    },
    "body": Object {
      "certificates": undefined,
      "collaterals": Array [],
      "fee": 181649n,
      "inputs": Array [],
      "mint": undefined,
      "outputs": Array [
        Object {
          "address": "addr_test1wphyve8r76kvfr5yn6k0fcmq0mn2uf6c6mvtsrafmr7awcg0vnzpg",
          "datum": "2f859cede222cf63ede95bfb867e3f880a44a4d057b85946b776d947bf094bef",
          "value": Object {
            "assets": Map {
              "126b8676446c84a5cd6e3259223b16a2314c5676b88ae1c1f8579a8f7441444158" => 2086814n,
            },
            "coins": 56670077n,
          },
        },
        Object {
          "address": "addr_test1qp2fxvmxlly62thlzmlrtf5tya2kay8lyucz40ns7xesrz2j8m73lvtj885qvfldxhadg5rsh5h79eczh6gu0deu96hqrrcz3e",
          "datum": undefined,
          "value": Object {
            "assets": undefined,
            "coins": 736788144n,
          },
        },
      ],
      "validityInterval": Object {
        "invalidBefore": undefined,
        "invalidHereafter": undefined,
      },
      "withdrawals": undefined,
    },
    "id": "56caf0441c4f0e209195b86b95e5304b338ca38ec232252c194153e8a3440c28",
    "index": 8,
    "txSize": 592,
    "witness": Object {
      "redeemers": undefined,
      "signatures": Map {},
    },
  },
  Object {
    "auxiliaryData": undefined,
    "blockHeader": Object {
      "blockNo": 3274726,
      "hash": "5caede44f4a5a775443095159cd42c8a64f35494086957ab3e04624015a6e13c",
      "slot": 49032415,
    },
    "body": Object {
      "certificates": undefined,
      "collaterals": Array [],
      "fee": 179933n,
      "inputs": Array [],
      "mint": undefined,
      "outputs": Array [
        Object {
          "address": "addr_test1wphyve8r76kvfr5yn6k0fcmq0mn2uf6c6mvtsrafmr7awcg0vnzpg",
          "datum": "b2513d43d5e275476208b4a88b241fd01cd767e47620547fa50364b3e7648479",
          "value": Object {
            "assets": undefined,
            "coins": 204000000n,
          },
        },
        Object {
          "address": "addr_test1qquh3j3u2v54pe2t6ntt0lyqnvm38v6prryuk8yhk556yjjkgqwx367r8umqax3slc758afpqsy9fzv45rsvgff8me4qa5md5z",
          "datum": undefined,
          "value": Object {
            "assets": undefined,
            "coins": 510111262n,
          },
        },
      ],
      "validityInterval": Object {
        "invalidBefore": undefined,
        "invalidHereafter": undefined,
      },
      "withdrawals": undefined,
    },
    "id": "3d8e3e7c6d0929812abc40d29a3b1e4f470f6d04e9d4b3c521f1f87f74f7ab88",
    "index": 10,
    "txSize": 553,
    "witness": Object {
      "redeemers": undefined,
      "signatures": Map {},
    },
  },
  Object {
    "auxiliaryData": undefined,
    "blockHeader": Object {
      "blockNo": 3274726,
      "hash": "5caede44f4a5a775443095159cd42c8a64f35494086957ab3e04624015a6e13c",
      "slot": 49032415,
    },
    "body": Object {
      "certificates": undefined,
      "collaterals": Array [],
      "fee": 183761n,
      "inputs": Array [],
      "mint": undefined,
      "outputs": Array [
        Object {
          "address": "addr_test1wphyve8r76kvfr5yn6k0fcmq0mn2uf6c6mvtsrafmr7awcg0vnzpg",
          "datum": "cd968f149166bfd195c82852cbbed09f3ca9d5b070e669f6c50f4ea9d98164f9",
          "value": Object {
            "assets": Map {
              "126b8676446c84a5cd6e3259223b16a2314c5676b88ae1c1f8579a8f7453554e444145" => 1678546n,
            },
            "coins": 254640002n,
          },
        },
        Object {
          "address": "addr_test1qq7rv7r27wq5nz2q6htul8k55xrcjsz2tpxkhqfk5f6kfgfnqdurhe3e8zlltj63kwh78hg7ykrexmn6jxxn42egzs4skzyvvc",
          "datum": undefined,
          "value": Object {
            "assets": Map {
              "126b8676446c84a5cd6e3259223b16a2314c5676b88ae1c1f8579a8f7453554e444145" => 661706n,
            },
            "coins": 38816239n,
          },
        },
      ],
      "validityInterval": Object {
        "invalidBefore": undefined,
        "invalidHereafter": undefined,
      },
      "withdrawals": undefined,
    },
    "id": "6eec4e9691e0fc2442e5c9bf22847998b80a1625b18a882a4e7b9e0cdda48dc3",
    "index": 11,
    "txSize": 640,
    "witness": Object {
      "redeemers": undefined,
      "signatures": Map {},
    },
  },
  Object {
    "auxiliaryData": undefined,
    "blockHeader": Object {
      "blockNo": 3274726,
      "hash": "5caede44f4a5a775443095159cd42c8a64f35494086957ab3e04624015a6e13c",
      "slot": 49032415,
    },
    "body": Object {
      "certificates": undefined,
      "collaterals": Array [],
      "fee": 181605n,
      "inputs": Array [],
      "mint": undefined,
      "outputs": Array [
        Object {
          "address": "addr_test1wphyve8r76kvfr5yn6k0fcmq0mn2uf6c6mvtsrafmr7awcg0vnzpg",
          "datum": "51505ba8a19dbf24510f5a5c1cb1ab9f4572e197d17ae0035b0e563d02c8bdc2",
          "value": Object {
            "assets": Map {
              "126b8676446c84a5cd6e3259223b16a2314c5676b88ae1c1f8579a8f744d494e" => 726163n,
            },
            "coins": 403099082n,
          },
        },
        Object {
          "address": "addr_test1qqt9fumrwz43e79rfjznn8nlnc05kdfyv7qrxx9ks2vacq8lxxtya039kqwxltw2q73wrdsvhgqrycllm0tg38c9nnkqxysjz6",
          "datum": undefined,
          "value": Object {
            "assets": undefined,
            "coins": 194539380n,
          },
        },
      ],
      "validityInterval": Object {
        "invalidBefore": undefined,
        "invalidHereafter": undefined,
      },
      "withdrawals": undefined,
    },
    "id": "0dbbc0e6d13549a1960476aae42fd492a7a19fba856f9cc9695ecc5c84fe87e9",
    "index": 13,
    "txSize": 591,
    "witness": Object {
      "redeemers": undefined,
      "signatures": Map {},
    },
  },
]
`;

exports[`ChainHistoryHttpService healthy state /txs/by-hashes server and snapshot testing has auxiliary data 1`] = `
Array [
  Object {
    "auxiliaryData": Object {
      "body": Object {
        "blob": Map {
          1968n => Map {
            "LQADA" => Array [
              Map {
                "value" => "0.00006725",
                "source" => "muesliswap",
              },
            ],
            "ADABTC" => Array [
              Map {
                "value" => "0.00002789",
                "source" => "coinGecko",
              },
            ],
            "ADAEUR" => Array [
              Map {
                "value" => "0.934303",
                "source" => "coinGecko",
              },
            ],
            "ADAJPY" => Array [
              Map {
                "value" => "119.97",
                "source" => "coinGecko",
              },
            ],
            "ADAUSD" => Array [
              Map {
                "value" => "1.04",
                "source" => "coinGecko",
              },
            ],
            "WMTADA" => Array [
              Map {
                "value" => "7.95e-7",
                "source" => "muesliswap",
              },
            ],
            "BTCDIFF" => Array [
              Map {
                "value" => "26643185256535.46",
                "source" => "trezor",
              },
            ],
            "HoskyADA" => Array [
              Map {
                "value" => "5.9e-8",
                "source" => "muesliswap",
              },
            ],
            "SpacecoinsADA" => Array [
              Map {
                "value" => "0.00955",
                "source" => "muesliswap",
              },
            ],
          },
        },
      },
    },
    "blockHeader": Object {
      "blockNo": 3274726,
      "hash": "5caede44f4a5a775443095159cd42c8a64f35494086957ab3e04624015a6e13c",
      "slot": 49032415,
    },
    "body": Object {
      "certificates": undefined,
      "collaterals": Array [],
      "fee": 183673n,
      "inputs": Array [],
      "mint": undefined,
      "outputs": Array [
        Object {
          "address": "addr_test1qz2fxv2umyhttkxyxp8x0dlpdt3k6cwng5pxj3jhsydzer3jcu5d8ps7zex2k2xt3uqxgjqnnj83ws8lhrn648jjxtwq2ytjqp",
          "datum": undefined,
          "value": Object {
            "assets": undefined,
            "coins": 1477211770n,
          },
        },
      ],
      "validityInterval": Object {
        "invalidBefore": undefined,
        "invalidHereafter": undefined,
      },
      "withdrawals": undefined,
    },
    "id": "3d2278e9cef71c79720a11bc3e08acbbd5f2175f7015d358c867fc9b419ae0b2",
    "index": 9,
    "txSize": 639,
    "witness": Object {
      "redeemers": undefined,
      "signatures": Map {},
    },
  },
]
`;

exports[`ChainHistoryHttpService healthy state /txs/by-hashes server and snapshot testing has certificates 1`] = `
Array [
  Object {
    "auxiliaryData": undefined,
    "blockHeader": Object {
      "blockNo": 2972717,
      "hash": "05fbc6f8a26c8e16d731dd86880be59b123d17b7ebc7271b8d9dedb4152888c2",
      "slot": 39224562,
    },
    "body": Object {
      "certificates": Array [
        Object {
          "__typename": "PoolRetirementCertificate",
          "epoch": 179,
          "poolId": "pool1xv0p9vje3r09tac22mhgnsg08rmfm5qxadggjnfnq3cz52apdew",
        },
      ],
      "collaterals": Array [],
      "fee": 179493n,
      "inputs": Array [],
      "mint": undefined,
      "outputs": Array [
        Object {
          "address": "addr_test1qpcnmvyjmxmsm75f747u566gw7ewz4mesdw7yl278uf9r3f5l7d7dpx2ymfwlm3e56flupga8yamjr2kwdt7dw77ktyqqtx2r7",
          "datum": undefined,
          "value": Object {
            "assets": undefined,
            "coins": 1497444361n,
          },
        },
      ],
      "validityInterval": Object {
        "invalidBefore": undefined,
        "invalidHereafter": 39233846,
      },
      "withdrawals": undefined,
    },
    "id": "face165bd7aa8d0d661cf1ceaa4e35d7611be3b1c7997da378c547aa2464a4fd",
    "index": 1,
    "txSize": 361,
    "witness": Object {
      "redeemers": undefined,
      "signatures": Map {},
    },
  },
  Object {
    "auxiliaryData": undefined,
    "blockHeader": Object {
      "blockNo": 3087425,
      "hash": "2d64f08b80b2f2afffa0887bf6421c3bacf863c70017ef78289340bc45bae1c5",
      "slot": 43010355,
    },
    "body": Object {
      "certificates": Array [
        Object {
          "__typename": "PoolRegistrationCertificate",
          "poolParameters": null,
        },
        Object {
          "__typename": "StakeDelegationCertificate",
          "poolId": "pool1xv0p9vje3r09tac22mhgnsg08rmfm5qxadggjnfnq3cz52apdew",
          "stakeKeyHash": "34ff9be684ca26d2efee39a693fe051d393bb90d567357e6bbdeb2c8",
        },
      ],
      "collaterals": Array [],
      "fee": 197973n,
      "inputs": Array [
        Object {
          "address": "addr_test1qpcnmvyjmxmsm75f747u566gw7ewz4mesdw7yl278uf9r3f5l7d7dpx2ymfwlm3e56flupga8yamjr2kwdt7dw77ktyqqtx2r7",
          "index": 0,
          "txId": "face165bd7aa8d0d661cf1ceaa4e35d7611be3b1c7997da378c547aa2464a4fd",
        },
      ],
      "mint": undefined,
      "outputs": Array [
        Object {
          "address": "addr_test1qpcnmvyjmxmsm75f747u566gw7ewz4mesdw7yl278uf9r3f5l7d7dpx2ymfwlm3e56flupga8yamjr2kwdt7dw77ktyqqtx2r7",
          "datum": undefined,
          "value": Object {
            "assets": undefined,
            "coins": 1497246388n,
          },
        },
      ],
      "validityInterval": Object {
        "invalidBefore": undefined,
        "invalidHereafter": 43018365,
      },
      "withdrawals": undefined,
    },
    "id": "19251f57476d7af2777252270413c01383d9503110a68b4fde1a239c119c4f5d",
    "index": 2,
    "txSize": 737,
    "witness": Object {
      "redeemers": undefined,
      "signatures": Map {},
    },
  },
]
`;

exports[`ChainHistoryHttpService healthy state /txs/by-hashes server and snapshot testing has collateral inputs 1`] = `
Array [
  Object {
    "auxiliaryData": undefined,
    "blockHeader": Object {
      "blockNo": 3274726,
      "hash": "5caede44f4a5a775443095159cd42c8a64f35494086957ab3e04624015a6e13c",
      "slot": 49032415,
    },
    "body": Object {
      "certificates": undefined,
      "collaterals": Array [],
      "fee": 774103n,
      "inputs": Array [],
      "mint": undefined,
      "outputs": Array [
        Object {
          "address": "addr_test1vpmwgcd7xuqr60ej3qnlfeyy5qhaudhmnmxey6str7v4rrcd3t2q4",
          "datum": undefined,
          "value": Object {
            "assets": undefined,
            "coins": 448931056n,
          },
        },
        Object {
          "address": "addr_test1vq6pv6z64ldwflq5zxllfyjzxwdsgajhwg00guhrjmwq2gs0s97am",
          "datum": undefined,
          "value": Object {
            "assets": undefined,
            "coins": 8000000n,
          },
        },
        Object {
          "address": "addr_test1vpmwgcd7xuqr60ej3qnlfeyy5qhaudhmnmxey6str7v4rrcd3t2q4",
          "datum": undefined,
          "value": Object {
            "assets": Map {
              "d6cfdbedd242056674c0e51ead01785497e3a48afbbb146dc72ee1e2123456" => 1n,
            },
            "coins": 1724100n,
          },
        },
        Object {
          "address": "addr_test1vzal5wcx2cnfvux84kf8clcj65ej2qklhtahecr5caytrdqr0jl5z",
          "datum": undefined,
          "value": Object {
            "assets": undefined,
            "coins": 1000000n,
          },
        },
        Object {
          "address": "addr_test1vqfn7fxr9wlraeymtcfvn6nlkyndp4ry0uryyk3vk73wlzsk8y0yd",
          "datum": undefined,
          "value": Object {
            "assets": undefined,
            "coins": 1000000n,
          },
        },
        Object {
          "address": "addr_test1vpmwgcd7xuqr60ej3qnlfeyy5qhaudhmnmxey6str7v4rrcd3t2q4",
          "datum": undefined,
          "value": Object {
            "assets": Map {
              "d6cfdbedd242056674c0e51ead01785497e3a48afbbb146dc72ee1e2123456" => 3n,
            },
            "coins": 3000000n,
          },
        },
      ],
      "validityInterval": Object {
        "invalidBefore": undefined,
        "invalidHereafter": undefined,
      },
      "withdrawals": undefined,
    },
    "id": "5acd6efb1b66299f1c5a2c4221af4bcaa4ba9929e8e6aa0e3f48707fa1796fc3",
    "index": 12,
    "txSize": 4763,
    "witness": Object {
      "redeemers": Array [
        Object {
          "executionUnits": Object {
            "memory": 4837876,
            "steps": 1615750737,
          },
          "index": 0,
          "purpose": "spend",
          "scriptHash": "9f244c64c6ca8e495f4d0ac48f106a1dbdf20b0821d598ebbcd1c57d",
        },
      ],
      "signatures": Map {},
    },
  },
]
`;

exports[`ChainHistoryHttpService healthy state /txs/by-hashes server and snapshot testing has mint operations 1`] = `
Array [
  Object {
    "auxiliaryData": undefined,
    "blockHeader": Object {
      "blockNo": 3157934,
      "hash": "f03084089ec7e74a79e69a5929b2d3c0836d6f12279bd103d0875847c740ae27",
      "slot": 45286016,
    },
    "body": Object {
      "certificates": undefined,
      "collaterals": Array [],
      "fee": 177777n,
      "inputs": Array [],
      "mint": Map {
        "57fca08abbaddee36da742a839f7d83a7e1d2419f1507fcbf391652243484f43" => 10000000n,
        "57fca08abbaddee36da742a839f7d83a7e1d2419f1507fcbf39165224d494e54" => 5000000000n,
        "57fca08abbaddee36da742a839f7d83a7e1d2419f1507fcbf3916522524245525259" => 1000000000n,
        "57fca08abbaddee36da742a839f7d83a7e1d2419f1507fcbf3916522534245525259" => 2000000000n,
        "57fca08abbaddee36da742a839f7d83a7e1d2419f1507fcbf391652256414e494c" => 15000000n,
      },
      "outputs": Array [
        Object {
          "address": "addr_test1qr74u5d3d07x53pq37acghulu7wvjt794s53xp2fz343drhx2aghqc4747n2yhu0dht5xz0t5j6n0fju3rs8mfj83tzqly49jr",
          "datum": undefined,
          "value": Object {
            "assets": undefined,
            "coins": 5528822746696n,
          },
        },
        Object {
          "address": "addr_test1qzmpmxyl7prdf0pazt0futtrg6k9drcay3ednatxqm5ky854nqdumcu3xny9qu5sk9m0wm0ypyty84kxj0gwd9seppfqzs9z2n",
          "datum": undefined,
          "value": Object {
            "assets": Map {
              "57fca08abbaddee36da742a839f7d83a7e1d2419f1507fcbf391652243484f43" => 10000000n,
              "57fca08abbaddee36da742a839f7d83a7e1d2419f1507fcbf39165224d494e54" => 5000000000n,
              "57fca08abbaddee36da742a839f7d83a7e1d2419f1507fcbf3916522524245525259" => 1000000000n,
              "57fca08abbaddee36da742a839f7d83a7e1d2419f1507fcbf3916522534245525259" => 2000000000n,
              "57fca08abbaddee36da742a839f7d83a7e1d2419f1507fcbf391652256414e494c" => 15000000n,
            },
            "coins": 1000000000n,
          },
        },
      ],
      "validityInterval": Object {
        "invalidBefore": undefined,
        "invalidHereafter": undefined,
      },
      "withdrawals": undefined,
    },
    "id": "952dfa431223fd671c5e9e048e016f70fcebd9e41fcb726969415ff692736eeb",
    "index": 0,
    "txSize": 509,
    "witness": Object {
      "redeemers": undefined,
      "signatures": Map {},
    },
  },
]
`;

exports[`ChainHistoryHttpService healthy state /txs/by-hashes server and snapshot testing has outputs with multi-assets 1`] = `
Array [
  Object {
    "auxiliaryData": undefined,
    "blockHeader": Object {
      "blockNo": 3157934,
      "hash": "f03084089ec7e74a79e69a5929b2d3c0836d6f12279bd103d0875847c740ae27",
      "slot": 45286016,
    },
    "body": Object {
      "certificates": undefined,
      "collaterals": Array [],
      "fee": 191109n,
      "inputs": Array [],
      "mint": undefined,
      "outputs": Array [
        Object {
          "address": "addr_test1wrsexavz37208qda7mwwu4k7hcpg26cz0ce86f5e9kul3hqzlh22t",
          "datum": "c5dfa8c3cbd5a959829618a7b46e163078cb3f1b39f152514d0c3686d553529a",
          "value": Object {
            "assets": Map {
              "57fca08abbaddee36da742a839f7d83a7e1d2419f1507fcbf3916522534245525259" => 10000000n,
            },
            "coins": 7420514n,
          },
        },
        Object {
          "address": "addr_test1qpvl4gf5r5h5w4yjrf58rt8slltem9tqfge36zqhsz5kgc8f2tc4ydn4zz9p0eymajqa4vj87he7yz6ssmh9x9h685hst9rgvk",
          "datum": undefined,
          "value": Object {
            "assets": Map {
              "22be35160908d953c25b30d1ad59876cbf073a8b31ef7a4f77468355414141" => 4208n,
              "57fca08abbaddee36da742a839f7d83a7e1d2419f1507fcbf39165224d494e54" => 1914111968n,
              "57fca08abbaddee36da742a839f7d83a7e1d2419f1507fcbf3916522524245525259" => 1000000000n,
              "57fca08abbaddee36da742a839f7d83a7e1d2419f1507fcbf3916522534245525259" => 1990000000n,
              "57fca08abbaddee36da742a839f7d83a7e1d2419f1507fcbf391652256414e494c" => 15000000n,
              "cd9d85fe5c8a1684c42ae0082e7e912fb7a7cca0900c5a3915eb1c3442454e59" => 2819431n,
              "d311d3488cc4fef19d05634adce8534977a3bc6fc18136ad65df1d4f6c71202e01" => 100000000n,
              "d311d3488cc4fef19d05634adce8534977a3bc6fc18136ad65df1d4f6c712038" => 172696733n,
            },
            "coins": 850065083n,
          },
        },
      ],
      "validityInterval": Object {
        "invalidBefore": undefined,
        "invalidHereafter": undefined,
      },
      "withdrawals": undefined,
    },
    "id": "cefd2fcf657e5e5d6c35975f4e052f427819391b153ebb16ad8aa107ba5a3819",
    "index": 30,
    "txSize": 711,
    "witness": Object {
      "redeemers": undefined,
      "signatures": Map {},
    },
  },
]
`;

exports[`ChainHistoryHttpService healthy state /txs/by-hashes server and snapshot testing has redeemers 1`] = `
Array [
  Object {
    "auxiliaryData": undefined,
    "blockHeader": Object {
      "blockNo": 3274726,
      "hash": "5caede44f4a5a775443095159cd42c8a64f35494086957ab3e04624015a6e13c",
      "slot": 49032415,
    },
    "body": Object {
      "certificates": undefined,
      "collaterals": Array [],
      "fee": 1030338n,
      "inputs": Array [],
      "mint": Map {
        "22c3b86a5b88a78b5de52f4aed2831d1483b3b7681f1ee2569538130f32324c10a93fe1962cf7470543932cc064482c3495fe3de7502f9edd84ca114" => 15355454n,
      },
      "outputs": Array [
        Object {
          "address": "addr_test1qqemvcq8wdt9cv0sxsghv497zjsjzyzkekpw4vlvea44kdgy720vc4ggn5u4y39cc2wctg2u6sgackadnl78lxqq3m9q47wq8e",
          "datum": undefined,
          "value": Object {
            "assets": undefined,
            "coins": 28178818258n,
          },
        },
        Object {
          "address": "addr_test1qqemvcq8wdt9cv0sxsghv497zjsjzyzkekpw4vlvea44kdgy720vc4ggn5u4y39cc2wctg2u6sgackadnl78lxqq3m9q47wq8e",
          "datum": undefined,
          "value": Object {
            "assets": Map {
              "ccc526143b6d41d56036248dbaa79440d68653f5b6a1919aa2c9e06131363732343139363030303033" => 1n,
            },
            "coins": 10000000n,
          },
        },
        Object {
          "address": "addr_test1qq9gwfwevn5s96jx9xzclntlrd8m0mrs3ezzva7akkvyj9y7yjf2z5h4fealu2rktu38m3mfv68vsjrtrfwuym60dfyq0axz58",
          "datum": undefined,
          "value": Object {
            "assets": Map {
              "126b8676446c84a5cd6e3259223b16a2314c5676b88ae1c1f8579a8f7453554e444145" => 1909n,
              "22c3b86a5b88a78b5de52f4aed2831d1483b3b7681f1ee2569538130f32324c10a93fe1962cf7470543932cc064482c3495fe3de7502f9edd84ca114" => 15355454n,
            },
            "coins": 2000000n,
          },
        },
        Object {
          "address": "addr_test1qqfleha26t47j6khuetrsjyxkwl4x2lya5jsmn24h53n6d6akgetsg2jxgxsqglg8k9m74c8uwl8gxen3hvxsupapqasdzvh6n",
          "datum": undefined,
          "value": Object {
            "assets": Map {
              "126b8676446c84a5cd6e3259223b16a2314c5676b88ae1c1f8579a8f7453554e444145" => 333305n,
            },
            "coins": 2000000n,
          },
        },
        Object {
          "address": "addr_test1qqvl0h49qke8yv8r5as3vrt3zaqdygjmfsfj63futhj803s2wkugrs72zdued30dtsce7mwclnd6n49a64q6f4mmcfksqaspe4",
          "datum": undefined,
          "value": Object {
            "assets": Map {
              "126b8676446c84a5cd6e3259223b16a2314c5676b88ae1c1f8579a8f7453554e444145" => 932541n,
            },
            "coins": 2000000n,
          },
        },
        Object {
          "address": "addr_test1wpjduy92cj4dqzs6y5refxphskru3kfgyhchyg7u7nadt8qqfddxd",
          "datum": "4d43bb04ab5283946e5edc6df728cb3ed891111876039264ae312d61b3207fff",
          "value": Object {
            "assets": Map {
              "126b8676446c84a5cd6e3259223b16a2314c5676b88ae1c1f8579a8f7453554e444145" => 1651585768n,
              "75ac961881fd5d8d0008d54b4f6914eb6a712faa3403dc32097379b0f32324c10a93fe1962cf7470543932cc064482c3495fe3de7502f9edd84ca114" => 1n,
              "95b7f0bbaa0b327e6b822840b0f7f7ee1c949e618f0aaeb6c5321cc34d494e53574150" => 1n,
            },
            "coins": 247344475554n,
          },
        },
      ],
      "validityInterval": Object {
        "invalidBefore": undefined,
        "invalidHereafter": 49033345,
      },
      "withdrawals": undefined,
    },
    "id": "24e75c64a309fd8fb400933795b2522ca818cba80a3838c2ff14cec2cc8ffe4e",
    "index": 14,
    "txSize": 10662,
    "witness": Object {
      "redeemers": Array [
        Object {
          "executionUnits": Object {
            "memory": 4195651,
            "steps": 1591910324,
          },
          "index": 0,
          "purpose": "spend",
          "scriptHash": "64de10aac4aad00a1a25079498378587c8d92825f17223dcf4fad59c",
        },
        Object {
          "executionUnits": Object {
            "memory": 88558,
            "steps": 46839629,
          },
          "index": 1,
          "purpose": "spend",
          "scriptHash": "6e4664e3f6acc48e849eacf4e3607ee6ae2758d6d8b80fa9d8fdd761",
        },
        Object {
          "executionUnits": Object {
            "memory": 88558,
            "steps": 46839629,
          },
          "index": 3,
          "purpose": "spend",
          "scriptHash": "6e4664e3f6acc48e849eacf4e3607ee6ae2758d6d8b80fa9d8fdd761",
        },
        Object {
          "executionUnits": Object {
            "memory": 88558,
            "steps": 46839629,
          },
          "index": 5,
          "purpose": "spend",
          "scriptHash": "6e4664e3f6acc48e849eacf4e3607ee6ae2758d6d8b80fa9d8fdd761",
        },
        Object {
          "executionUnits": Object {
            "memory": 106622,
            "steps": 55720739,
          },
          "index": 0,
          "purpose": "mint",
          "scriptHash": "22c3b86a5b88a78b5de52f4aed2831d1483b3b7681f1ee2569538130",
        },
      ],
      "signatures": Map {},
    },
  },
]
`;

exports[`ChainHistoryHttpService healthy state /txs/by-hashes server and snapshot testing has withdrawals 1`] = `
Array [
  Object {
    "auxiliaryData": undefined,
    "blockHeader": Object {
      "blockNo": 3274726,
      "hash": "5caede44f4a5a775443095159cd42c8a64f35494086957ab3e04624015a6e13c",
      "slot": 49032415,
    },
    "body": Object {
      "certificates": Array [
        Object {
          "__typename": "StakeDelegationCertificate",
          "poolId": "pool1e4aey2ele5482zyvwnsexzq4x9r8m2dx98rf38wrrlcpca3f2uv",
          "stakeKeyHash": "c36fa04085ca4008e1b1386c38adfc041cd13f99a4bfd2990ffba4ac",
        },
      ],
      "collaterals": Array [],
      "fee": 183233n,
      "inputs": Array [],
      "mint": undefined,
      "outputs": Array [
        Object {
          "address": "addr_test1qre8ns5ahywhp3c3y3tx94d3mlefhz5z52gzyl5rhypjfdseq9dceusu9snpw8hrugasdcp00akqvtfjfr3hrsv0pa4scxxqx6",
          "datum": undefined,
          "value": Object {
            "assets": undefined,
            "coins": 489109783n,
          },
        },
        Object {
          "address": "addr_test1qr66d9smqd69upk9pkkl0ll7pchzfr60zc496xzatln48ewrd7syppw2gqywrvfcdsu2mlqyrngnlxdyhlffjrlm5jkqqw05lr",
          "datum": undefined,
          "value": Object {
            "assets": undefined,
            "coins": 512345678n,
          },
        },
      ],
      "validityInterval": Object {
        "invalidBefore": undefined,
        "invalidHereafter": undefined,
      },
      "withdrawals": Array [
        Object {
          "quantity": 1409612n,
          "stakeAddress": "stake_test1uqvszkuv7gwzcfshrm37ywcxuqhh7mqx95ey3cm3cx8s76c7w97f8",
        },
        Object {
          "quantity": 229082n,
          "stakeAddress": "stake_test1urpklgzqsh9yqz8pkyuxcw9dlszpe5flnxjtl55epla6ftqktdyfz",
        },
      ],
    },
    "id": "cb66e0f5778718f8bfcfd043712f37d9993f4703b254a7a4d954d34225fe2f99",
    "index": 2,
    "txSize": 629,
    "witness": Object {
      "redeemers": undefined,
      "signatures": Map {},
    },
  },
]
`;
